samples/_failures_safe/1761644559_4f2e3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67794bfa.c: In function ‘main’:
./samples/SAFE/__tmp_67794bfa.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_67794bfa.c:140:9: error: expected declaration or statement at end of input
